tests/snapshots/snapshot_fixtures__fixtures__redundant_parens.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/redundant_parens.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]

fn classify(%arg0: s32i, %arg1: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s32i):
        %11 = alloca s32i, "a", align 4
        %12 = alloca s32i, "b", align 4
        %13 = alloca s32i, "__retval", align 4
        %14 = alloca s32i, "r", align 4
        %15 = alloca s32i, "t", align 4
        %16 = alloca s32i, "m", align 4
        store %arg0, %11
        store %arg1, %12
        %17 = const 0 : s32i
        store %17, %14, align 4
        scope {
            while {
                %53 = load %11 : s32i, align 4
                %54 = load %12 : s32i, align 4
                %55 = cmp lt %53, %54 : bool
                condition %55
            } do {
                scope {
                    %47 = load %11 : s32i, align 4
                    %48 = const 1 : s32i
                    %49 = add %47, %48 : s32i [nsw]
                    store %49, %11, align 4
                    %50 = load %14 : s32i, align 4
                    %51 = const 1 : s32i
                    %52 = add %50, %51 : s32i [nsw]
                    store %52, %14, align 4
                    yield
                }
                yield
            }
            yield
        }
        scope {
            %41 = load %11 : s32i, align 4
            %42 = load %12 : s32i, align 4
            %43 = cmp eq %41, %42 : bool
            if %43 {
                %44 = load %14 : s32i, align 4
                %45 = const 10 : s32i
                %46 = add %44, %45 : s32i [nsw]
                store %46, %14, align 4
                yield
            }
            yield
        }
        %18 = load %11 : s32i, align 4
        %19 = load %12 : s32i, align 4
        %20 = cmp gt %18, %19 : bool
        %21 = ternary %20 ? { : s32i
            %38 = load %11 : s32i, align 4
            %39 = load %12 : s32i, align 4
            %40 = sub %38, %39 : s32i [nsw]
            yield %40
        } : {
            %35 = load %12 : s32i, align 4
            %36 = load %11 : s32i, align 4
            %37 = sub %35, %36 : s32i [nsw]
            yield %37
        }
        store %21, %15, align 4
        %22 = load %11 : s32i, align 4
        %23 = load %12 : s32i, align 4
        %24 = and %22, %23 : s32i
        %25 = load %11 : s32i, align 4
        %26 = const 1 : s32i
        %27 = shift left %25, %26 : s32i
        %28 = add %24, %27 : s32i [nsw]
        store %28, %16, align 4
        %29 = load %14 : s32i, align 4
        %30 = load %15 : s32i, align 4
        %31 = add %29, %30 : s32i [nsw]
        %32 = load %16 : s32i, align 4
        %33 = add %31, %32 : s32i [nsw]
        store %33, %13
        %34 = load %13 : s32i
        return %34
}
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @printf : ((s8i*, ...) -> s32i)*
    %3 = get_global @.str : s8i[4]*
    %4 = cast(array_to_ptrdecay) %3 : s8i*
    %5 = const 2 : s32i
    %6 = const 5 : s32i
    %7 = call @classify(%5, %6) : s32i [all]
    %8 = call @printf(%4, %7) : s32i [all]
    %9 = const 0 : s32i
    store %9, %0
    %10 = load %0 : s32i
    return %10
}
