tests/snapshots/snapshot_fixtures__fixtures__returns_nonnull.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/returns_nonnull.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]

fn get(%arg0: s32i*) -> s32i* [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i*):
        %12 = alloca s32i*, "a", align 8
        %13 = alloca s32i*, "__retval", align 8
        store %arg0, %12
        %14 = load %12 : s32i*, align 8
        store %14, %13
        %15 = load %13 : s32i*
        return %15
}
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "x", align 4
    %2 = const 0 : s32i
    store %2, %0
    %3 = const 5 : s32i
    store %3, %1, align 4
    %4 = get_global @printf : ((s8i*, ...) -> s32i)*
    %5 = get_global @.str : s8i[4]*
    %6 = cast(array_to_ptrdecay) %5 : s8i*
    %7 = call @get(%1) : s32i* [all]
    %8 = load %7 : s32i, align 4
    %9 = call @printf(%6, %8) : s32i [all]
    %10 = const 0 : s32i
    store %10, %0
    %11 = load %0 : s32i
    return %11
}
