tests/snapshots/snapshot_fixtures__fixtures__setjmp_recovery_extern_c_callback.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/setjmp_recovery_extern_c_callback.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[14] = "failures: %d\n" [cir_private, default, align 1, dso_local, constant]
global failures : s32i = 0 [internal, default, align 4, dso_local]
global .str.1 : s8i[6] = "PASS\n" [cir_private, default, align 1, dso_local, constant]
global env : rec___jmp_buf_tag[1] = zero [internal, default, align 16, dso_local]
global .str.2 : s8i[6] = "FAIL\n" [cir_private, default, align 1, dso_local, constant]

fn longjmp(%arg0: rec___jmp_buf_tag*, %arg1: s32i) -> void [external, c, nothrow];
fn fail_now() -> void [internal, c, no_inline, dso_local, nothrow] {
    %38 = get_global @longjmp : ((rec___jmp_buf_tag*, s32i) -> void)*
    %39 = get_global @env : rec___jmp_buf_tag[1]*
    %40 = cast(array_to_ptrdecay) %39 : rec___jmp_buf_tag*
    %41 = const 1 : s32i
    call @longjmp(%40, %41) [all]
    return
}
fn check(%arg2: s32i) -> void [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: s32i):
        %30 = alloca s32i, "ok", align 4
        store %arg2, %30
        scope {
            %35 = load %30 : s32i, align 4
            %36 = cast(int_to_bool) %35 : bool
            %37 = not %36 : bool
            if %37 {
                call @fail_now() [all]
                yield
            }
            yield
        }
        %31 = get_global @printf : ((s8i*, ...) -> s32i)*
        %32 = get_global @.str.1 : s8i[6]*
        %33 = cast(array_to_ptrdecay) %32 : s8i*
        %34 = call @printf(%33) : s32i [all]
        return
}
fn _setjmp(%arg0: rec___jmp_buf_tag*) -> s32i [external, c, nothrow];
fn run_case(%arg0: ((s32i) -> void)*, %arg1: s32i) -> void [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: ((s32i) -> void)*, %arg1: s32i):
        %14 = alloca ((s32i) -> void)*, "fn", align 8
        %15 = alloca s32i, "ok", align 4
        store %arg0, %14
        store %arg1, %15
        scope {
            %18 = get_global @_setjmp : ((rec___jmp_buf_tag*) -> s32i)*
            %19 = get_global @env : rec___jmp_buf_tag[1]*
            %20 = cast(array_to_ptrdecay) %19 : rec___jmp_buf_tag*
            %21 = call @_setjmp(%20) : s32i [all]
            %22 = cast(int_to_bool) %21 : bool
            if %22 {
                %23 = get_global @failures : s32i*
                %24 = load %23 : s32i, align 4
                %25 = inc %24 : s32i [nsw]
                store %25, %23, align 4
                %26 = get_global @printf : ((s8i*, ...) -> s32i)*
                %27 = get_global @.str.2 : s8i[6]*
                %28 = cast(array_to_ptrdecay) %27 : s8i*
                %29 = call @printf(%28) : s32i [all]
                return
            }
            yield
        }
        %16 = load %14 : ((s32i) -> void)*, align 8
        %17 = load %15 : s32i, align 4
        call %16(%17) [all]
        return
}
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca ((s32i) -> void)*, "fn", align 8
    %2 = const 0 : s32i
    store %2, %0
    %3 = get_global @check : ((s32i) -> void)*
    store %3, %1, align 8
    %4 = load %1 : ((s32i) -> void)*, align 8
    %5 = const 0 : s32i
    call @run_case(%4, %5) [all]
    %6 = get_global @printf : ((s8i*, ...) -> s32i)*
    %7 = get_global @.str : s8i[14]*
    %8 = cast(array_to_ptrdecay) %7 : s8i*
    %9 = get_global @failures : s32i*
    %10 = load %9 : s32i, align 4
    %11 = call @printf(%8, %10) : s32i [all]
    %12 = const 0 : s32i
    store %12, %0
    %13 = load %0 : s32i
    return %13
}
