tests/snapshots/snapshot_fixtures__fixtures__setjmp_recovery_guard.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/setjmp_recovery_guard.c" (c, x86_64-unknown-linux-gnu)
global env : rec___jmp_buf_tag[1] = zero [internal, default, align 16, dso_local]
global .str : s8i[5] = "loop" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[14] = "failures: %d\n" [cir_private, default, align 1, dso_local, constant]
global failures : s32i = 0 [internal, default, align 4, dso_local]
global .str.2 : s8i[10] = "FAIL: %s\n" [cir_private, default, align 1, dso_local, constant]
global .str.3 : s8i[5] = "case" [cir_private, default, align 1, dso_local, constant]
global .str.4 : s8i[15] = "PASS: case %d\n" [cir_private, default, align 1, dso_local, constant]

fn _setjmp(%arg0: rec___jmp_buf_tag*) -> s32i [external, c, nothrow];
fn record_failure(%arg3: s8i*) -> void [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg3: s8i*):
        %55 = alloca s8i*, "phase", align 8
        store %arg3, %55
        %56 = get_global @failures : s32i*
        %57 = load %56 : s32i, align 4
        %58 = inc %57 : s32i [nsw]
        store %58, %56, align 4
        %59 = get_global @printf : ((s8i*, ...) -> s32i)*
        %60 = get_global @.str.2 : s8i[10]*
        %61 = cast(array_to_ptrdecay) %60 : s8i*
        %62 = load %55 : s8i*, align 8
        %63 = call @printf(%61, %62) : s32i [all]
        return
}
fn longjmp(%arg0: rec___jmp_buf_tag*, %arg1: s32i) -> void [external, c, nothrow];
fn inner_check(%arg2: s32i) -> void [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: s32i):
        %47 = alloca s32i, "ok", align 4
        store %arg2, %47
        scope {
            %48 = load %47 : s32i, align 4
            %49 = cast(int_to_bool) %48 : bool
            %50 = not %49 : bool
            if %50 {
                %51 = get_global @longjmp : ((rec___jmp_buf_tag*, s32i) -> void)*
                %52 = get_global @env : rec___jmp_buf_tag[1]*
                %53 = cast(array_to_ptrdecay) %52 : rec___jmp_buf_tag*
                %54 = const 1 : s32i
                call @longjmp(%53, %54) [all]
                yield
            }
            yield
        }
        return
}
fn run_case(%arg0: s32i, %arg1: s32i) -> void [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s32i):
        %29 = alloca s32i, "id", align 4
        %30 = alloca s32i, "should_fail", align 4
        store %arg0, %29
        store %arg1, %30
        scope {
            %40 = get_global @_setjmp : ((rec___jmp_buf_tag*) -> s32i)*
            %41 = get_global @env : rec___jmp_buf_tag[1]*
            %42 = cast(array_to_ptrdecay) %41 : rec___jmp_buf_tag*
            %43 = call @_setjmp(%42) : s32i [all]
            %44 = cast(int_to_bool) %43 : bool
            if %44 {
                %45 = get_global @.str.3 : s8i[5]*
                %46 = cast(array_to_ptrdecay) %45 : s8i*
                call @record_failure(%46) [all]
                return
            }
            yield
        }
        %31 = load %30 : s32i, align 4
        %32 = cast(int_to_bool) %31 : bool
        %33 = not %32 : bool
        %34 = cast(bool_to_int) %33 : s32i
        call @inner_check(%34) [all]
        %35 = get_global @printf : ((s8i*, ...) -> s32i)*
        %36 = get_global @.str.4 : s8i[15]*
        %37 = cast(array_to_ptrdecay) %36 : s8i*
        %38 = load %29 : s32i, align 4
        %39 = call @printf(%37, %38) : s32i [all]
        return
}
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %10 = alloca s32i, "i", align 4
        %11 = const 0 : s32i
        store %11, %10, align 4
        for cond: {
            %26 = load %10 : s32i, align 4
            %27 = const 4 : s32i
            %28 = cmp lt %26, %27 : bool
            condition %28
        } step: {
            %12 = load %10 : s32i, align 4
            %13 = inc %12 : s32i [nsw]
            store %13, %10, align 4
            yield
        } do {
            scope {
                scope {
                    %19 = get_global @_setjmp : ((rec___jmp_buf_tag*) -> s32i)*
                    %20 = get_global @env : rec___jmp_buf_tag[1]*
                    %21 = cast(array_to_ptrdecay) %20 : rec___jmp_buf_tag*
                    %22 = call @_setjmp(%21) : s32i [all]
                    %23 = cast(int_to_bool) %22 : bool
                    if %23 {
                        %24 = get_global @.str : s8i[5]*
                        %25 = cast(array_to_ptrdecay) %24 : s8i*
                        call @record_failure(%25) [all]
                        continue
                    }
                    yield
                }
                %14 = load %10 : s32i, align 4
                %15 = load %10 : s32i, align 4
                %16 = const 2 : s32i
                %17 = cmp eq %15, %16 : bool
                %18 = cast(bool_to_int) %17 : s32i
                call @run_case(%14, %18) [all]
                yield
            }
            yield
        }
        yield
    }
    %2 = get_global @printf : ((s8i*, ...) -> s32i)*
    %3 = get_global @.str.1 : s8i[14]*
    %4 = cast(array_to_ptrdecay) %3 : s8i*
    %5 = get_global @failures : s32i*
    %6 = load %5 : s32i, align 4
    %7 = call @printf(%4, %6) : s32i [all]
    %8 = const 0 : s32i
    store %8, %0
    %9 = load %0 : s32i
    return %9
}
